<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Location Finder</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Find People</item> 
        <item >Friends</item>
        <item >Profile</item>
        <item >Receive Request</item>
        <item >Create Group</item>
        <item >Groups</item>
    </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_action_add_group</item>
        <item>@drawable/ic_action_group</item>
    </array>
    
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    
    
    <!-- String for Login  -->
    <string name="LoginHeader">Login</string>
    <string name="LoginSubHeader">Already Account?</string>
    <string name="LoginEmail">Enter Email</string>
    <string name="LoginPass">Enter Password</string>
    <string name="LoginSubmit">Login</string>
    <string name="LoginSuggReg">If You have not registered yet!</string>  
    <string name="LoginRegister">Click For Registration</string>
    
    <!-- String for Registration  -->
    <string name="RegHeader">Registration</string>
    <string name="RegFName">Enter First Name</string>
    <string name="RegLName">Enter Last Name</string>
    <string name="RegEmail">Enter Email</string>
    <string name="RegMobile">Enter Mobile</string>
    <string name="RegPass">Enter Password</string>
    <string name="RegConfPass">Confirm Password</string>
    <string name="RegSubmit">Register</string>
    
    <!-- String for Home Page -->
    <string name="HomeFilter">Filter</string>
    <string name="HomeItemName">Pramod Kumar Varma</string>
    <string name="HomeItemAddress">C-279 New Ashok Nagar Delhi</string>
    <string name="HomeItemDateTime">11 May 2014 (6:30 PM)</string>
    <string name="HomeItemFriendList">Friend List</string>
    <string name="HomeItemTitle">Recent Get Location Results</string>
    
     <!-- String for Friend List Page -->
    <string name="FriendListItemName">Pramod Varma</string>
    
    
    <!-- String for Friend Profile -->
    <string name="FriendProfileName">Pramod Varma</string>
    <string name="FriendProfileLocLable">Location</string>
    <string name="FriendProfileDateTime">Date Time</string>
    <string name="FriendProfileAddress">C-279 New Ashok Nagar Delhi</string>
    <string name="FriendProfileGetLoc">Get Location</string>
    <string name="FriendProfileSendSMS">Send SMS</string>
    <string name="FriendProfileBlock">Block</string>
    <string name="FriendProfileAdd">Add</string>
    <string name="FriendListCircleName">Friends</string>
    
    <!-- String for User Profile -->
    <string name="UserProfileFirstName">First Name</string>
    <string name="UserProfileLastName">Last Name</string>
    <string name="UserProfileEmail">Email-Id</string>
    <string name="UserProfileMob">9999999999</string>
    <string name="UserProfileCodeLabel">Code</string>
    <string name="UserProfileCode"></string>
    <string name="UserProfileNewCode">Generate New Code</string>
    <string name="UserProfileOptionLabel">Set Your Search Option</string>
    <string name="UserProfileByCode"> By Code</string>
    <string name="UserProfileByName"> By Name</string>
    <string name="UserProfileByEmail"> By Email</string>
    <string name="UserProfileByMobNo"> By Mobile</string>
    <string name="UserProfileSaveProfile">Save Profile</string>
    
    <!-- String for Search Item -->
    <string name="SearchInput">Enter Code</string>
    <string name="SearchItemName">Pramod Kumar Varma</string>
    <string name="SearchItemAddSubmit">Add</string>
    <string name="FriendProfileViewLoc">View Location On Map</string>
    <string name="SearchItemBlock">Block</string>
    <string name="SearchItemUnBlock">UnBlock</string>
    <string name="searchIcon">Search Icon</string>
    <string-array name="searchByOptionsArray">
        <item name="searchByOptions0">By Code</item>
        <item name="searchByOptions1">By Name</item>
        <item name="searchByOptions2">By Email</item>
        <item name="searchByOptions3">By Mobile No.</item>
    </string-array>
    
    <string name="receiverequestrejectbtn">Reject</string>
    <string name="receiverequestblockbtn">Block</string>
    
    <!-- String for Profile Image Update -->
    <string name="ImageUpdateLabel">Profile Image Update</string>
    <string name="ProfileImageUpdateCamera">Take From Camera</string>
    <string name="ProfileImageUpdateGallery">Select From Gallery</string>
    <string name="ProfileImageUpdateRotate">Rotate</string>
    <string name="ProfileImageUpdatePreview">Preview</string>
    <string name="ProfileImageUpdateSetProfile">Set Profile</string>
    
    <string name="img_desc">Image Desc</string>
    
    <!-- String for group -->
    <string name="CreateGroupLabel">Group Creation</string>
    <string name="CreateGroupGroupNameHint">Enter Group Name</string>
    <string name="CreateGroupCreate">Create</string>
    <string name="GroupListLabel">Group List</string>
    <string name="GroupItemName">Group Name</string>
    <string name="GroupItemEdit">Edit</string>
    <string name="GroupItemDelete">Delete</string>
    
    <!-- String for Dialog -->
    <string name="Cancel">Cancel</string>
    <string name="EnterMessage">Enter Your Message</string>
    <string name="Send">Send</string>
    <string name="ProfileUpdateLabel">Profile Update</string>
    <string name="ValidInput">Enter Valid Input</string>
    <string name="Save">Save</string>
    
</resources>