<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/sgibrightgray" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/Blue" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CreateGroupLabel"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textStyle="bold"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="15dp"
        android:background="@color/white" >

        <EditText
            android:id="@+id/etCreateGroupName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:background="@color/sgibrightgray"
            android:hint="@string/CreateGroupGroupNameHint"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:singleLine="true" >

        </EditText>

    </LinearLayout>
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="15dp" >
        
		<Button
		    android:id="@+id/btnCreateGroupSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CreateGroupCreate"
            android:textColor="@color/white"
            android:background="@color/Blue" />
		
    </LinearLayout>

</LinearLayout>
