<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/pop_up_box"
    android:weightSum="4"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center" >

        <TextView
            android:id="@+id/tvProfileUpdateHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ProfileUpdateLabel"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center" >

        <TextView
            android:id="@+id/tvProfileUpdateHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ValidInput" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal" >

        <EditText
            android:id="@+id/etProfileUpdateInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext_normal"
            android:ems="10"
            android:paddingLeft="5dp"
            android:inputType="textPersonName" >

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2"
        android:baselineAligned="false" >

        <LinearLayout
            android:id="@+id/llProfileUpdateCancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvProfileUpdateCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/Blue"
                android:text="@string/Cancel"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
             android:id="@+id/llProfileUpdateSave"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center" >

            <TextView
                android:id="@+id/tvProfileUpdateSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/Blue"
                android:text="@string/Save"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
