<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:baselineAligned="false"
    android:weightSum="1.0" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight=".30"
        android:gravity="center"
        android:padding="5dp" >

        <ImageView
            android:id="@+id/ivreceiverequestPic"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:contentDescription="your pic"
            android:src="@drawable/images" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".70"
        android:orientation="vertical"
        android:padding="5dp"
        android:weightSum="1.0" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight=".5"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/tvreceiverequestName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SearchItemName"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:baselineAligned="false"
            android:weightSum="1.0" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight=".33" >

                <Button
                    android:id="@+id/btnreceiverequestadd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/SearchItemAddSubmit"
                    android:background="@color/Blue" />

            </LinearLayout>
            
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight=".33" >

                <Button
                    android:id="@+id/btnreceiverequestreject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/receiverequestrejectbtn"
                    android:background="@color/Blue" />

            </LinearLayout>
            
             <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight=".33" >

                <Button
                    android:id="@+id/btnreceiverequestblock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/receiverequestblockbtn"
                    android:background="@color/Blue" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
